@@ -1,3 +1,10 @@
+2009-06-21  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
+	[config] Use CPPFLAGS, LDFLAGS directly.
+
+	* configure.in: Add some AC_MSG_NOTICE calls.
+	(CPPFLAGS, LDFLAGS): Set these vars.
+
 2009-06-20  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
 	New (database postgres) proc: pg-server-version
